- Fixed wrapping on code snippet - Showing menu all the time - Set default path to about me - Fixed thoughts edit

--- a/app/assets/stylesheets/skeleton.css
+++ b/app/assets/stylesheets/skeleton.css
@@ -317,7 +317,7 @@ code {
 pre > code {
   display: block;
   padding: 1rem 1.5rem;
-  white-space: pre; }
+  white-space: break-spaces; }
 
 
 /* Tables
